simplify the first example